<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="devep.veralezama.app.apptaxi.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText
                android:id="@+id/regEdtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regCorreo"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/regEdtNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regNombres"/>
            <EditText
                android:id="@+id/regEdtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regApellidos"/>
            <EditText
                android:id="@+id/regEdtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regCelular"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/regEdtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regPassword"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/regEdtRepPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regRepPassword"
                android:inputType="textPassword"/>
            <TextView
                android:id="@+id/regEdtBtnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect3"
                android:text="@string/regRegistrar"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="6dp"
                android:elevation="3dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
